# ai-workshop-samples

./: README.md
01-ai-bot/: README.md  (+1 more)
02-agent-team/: .gitignore  Dockerfile.web  README.md  docker-compose.prod.yml  pyproject.toml  team.yaml
02-agent-team/.kiro/prompts/: service-check.md
02-agent-team/.kiro/steering/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
02-agent-team/agents/admin-agent/knowledge/wiki/: overview.md
02-agent-team/agents/ai-dev-agent/.kiro/agents/: ai-dev-agent.json
02-agent-team/agents/coder-agent/knowledge/: schema.md
02-agent-team/agents/pm-agent/knowledge/: schema.md
02-agent-team/agents/qa-agent/knowledge/: index.md  schema.md
02-agent-team/apps/web/: eslint.config.mjs  package.json  tailwind.config.js
02-agent-team/apps/web/src/: middleware.ts
02-agent-team/knowledge/: schema.md
02-agent-team/src/: bootstrap.py
02-agent-team/src/business/: news_renderer.py  news_scraper.py
02-agent-team/src/coordinator/: task_lifecycle.py
02-agent-team/src/coordinator/a2a/: graph.py  progress_parser.py  protocol.py  router.py
02-agent-team/src/coordinator/events/: bus.py  types.py
02-agent-team/src/coordinator/services/: autopilot.py  cost_tracker.py  health_monitor.py
02-agent-team/src/gateway/: __init__.py
02-agent-team/src/gateway/api/: admin.py  agents.py  costs.py  ws.py
02-agent-team/src/gateway/telegram/: bot.py  formatters.py  progress.py
02-agent-team/src/runtime/: mcp_registry.py  multica_provider.py  registry.py
02-agent-team/tests/: test_a2a_router.py  test_api.py  test_eventbus.py  test_task_graph.py
(+95 files in other folders)
