[project]
name = "02-agent-team"
version = "0.1.0"
description = "AI Agent 團隊"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-telegram-bot[ext]>=21.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
